# Safeloop-coding-agent

./: .dockerignore  .gitignore  .gitlab-ci.yml  AGENT_LOG.md  AI4SE_Final_Project_B_应用类项目.md  Dockerfile  LAB_SAMPLES.md  Makefile  PLAN.md  README.md  REFLECTION.md  SPEC.md  SPEC_PROCESS.md  pyproject.toml
.github/workflows/: ci.yml
.superpowers/sdd/: task-1-report.md  task-10-report.md  task-11-report.md  task-11-review-fix-report.md  task-12-report.md  task-13-report.md  task-14-report.md  task-15-report.md  task-16-report.md  task-2-report.md  task-3-report.md  task-5-report.md  task-6-report.md  task-7-report.md  task-8-report.md  task-9-report.md
safeloop/: __init__.py  actions.py  cli.py  config.py  credentials.py  demo.py  events.py  feedback.py  models.py  run_manager.py  state_machine.py  web.py
safeloop/llm/: __init__.py  base.py  deepseek.py  mock.py
safeloop/security/: guardrails.py  redaction.py
safeloop/tools/: __init__.py  base.py  commands.py  dispatcher.py  files.py  finish.py  memory.py
samples/python_buggy_calculator/: calculator.py  safeloop.yml
tests/: test_cli_bootstrap.py  test_cli_deepseek_chat.py  test_command_tools.py  test_config.py  test_credentials.py  test_deepseek_client.py  test_demo.py  test_dispatcher.py  test_distribution_files.py  test_feedback.py  test_file_tools.py  test_guardrails.py  test_llm_actions.py  test_memory.py  test_models_events.py  test_process_docs.py  test_state_machine.py  test_web.py
